reformatted spacing on main page and fixed a grammar error on curry page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .header{
     text-align: center;
 }
@@ -10,9 +11,16 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 20px;
+    padding: 20px;
+}
+
+.options {
+    text-align: center;
+
 }
 
 .button {
-    text-align: center;
+    background-color: rgb(211, 249, 249);
+    padding: 5px 10px;
+    margin: 0px 15px;
 }
